<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_white_24dp"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_group_white_24dp"
            android:title="@string/nav_friends" />

        <item
            android:id="@+id/nav_battles"
            android:icon="@drawable/ic_videogame_asset_white_24dp"
            android:title="@string/nav_battles" />

        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_shopping_cart_white_24dp"
            android:title="@string/nav_products" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_white_24dp"
            android:title="@string/nav_share" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_white_24dp"
            android:title="@string/nav_about" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_cancel_white_24dp"
            android:title="@string/nav_logout" />

    </group>

</menu>