<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.cpbr.perguntas.RegisterActivity">

    <LinearLayout
        android:id="@+id/login_fields_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/btnRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/email_input_layout"
            android:textColorHint="@android:color/white">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_marginTop="69dp"
                android:id="@+id/editMail"
                android:hint="@string/typeEmail"
                android:textColorHint="@android:color/white"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_weight="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/password_input_layout"
            android:textColorHint="@android:color/white">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_below="@+id/editMail"
                android:layout_alignRight="@+id/editMail"
                android:layout_alignEnd="@+id/editMail"
                android:layout_marginTop="19dp"
                android:id="@+id/editPass"
                android:hint="@string/typePassword"
                android:fontFamily="sans-serif"
                tools:ignore="UnusedAttribute"
                android:textColor="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/confirm_pass_input_layout"
            android:textColorHint="@android:color/white"            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editConfPass"
                android:hint="@string/confirmePassword"
                android:fontFamily="sans-serif"
                android:layout_below="@+id/editPass"
                android:layout_alignLeft="@+id/editPass"
                android:layout_alignStart="@+id/editPass"
                android:layout_marginTop="26dp"
                tools:targetApi="jelly_bean"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:text="@string/registerUser"
        android:background="@drawable/button_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:textColor="@android:color/white"
        android:id="@+id/btnRegister"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/app_logo"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="56dp"
        android:textStyle="bold"
        android:background="@drawable/logo"
        android:layout_height="170dp"
        android:layout_width="340dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
